# WAIL

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile.test-client  README.md  conductor.json  docker-compose.e2e.yml  knope.toml  tradeoffs.md
.cargo/: config.toml
.changeset/: auto-merge-release-pr.md  buffer-return-channel.md  client-channel-mapping.md  discard-warmup-interval-audio.md  e2e-audio-test.md  fix-brew-postinstall.md  fix-homebrew-bundle.md  fix-homebrew-locked-build.md  fix-homebrew-pkgconf.md  fix-interval-sync-on-join.md  fix-ipc-reuseaddr.md  fix-linux-ci-x11-xcb.md  fix-peer-alignment.md  fix-preconnect-watchdog-loop.md  fix-preconnect-watchdog.md  fix-windows-plugin-install.md  gate-audio-on-lock.md  hello-completion-watchdog.md  homebrew-source-formula.md  honeybadger-integration.md  join-send-channels.md  local-debug-log.md  local-session-recording.md  multi-send-streams.md  peer-chat.md  peer-log-streaming.md  peer-registry-refactor.md  peer-status-slot.md  plugin-install-homebrew-fallback.md  plugin-keep-alive.md  public-rooms.md  reablink-readme.md  reduce-peer-status-log-noise.md  send-passthrough.md  strict-commit-conventions.md  suppress-tao-peer-broadcast.md  test-mode.md  webrtc-peer-visibility.md  win-choco-package.md  windows-installer-plugin-page.md  (+2 more)
.claude/commands/: e2e.md  release.md  test-client.md
.github/workflows/: auto-release.yml  build.yml  release-on-merge.yml  release.yml  update-homebrew.yml
Formula/: wail.rb
crates/wail-app/: Cargo.toml
crates/wail-app/src/: main.rs
crates/wail-audio/: Cargo.toml
crates/wail-audio/src/: bridge.rs  codec.rs  frame_assembler.rs  interval.rs  ipc.rs  lib.rs  pipeline.rs  ring.rs  slot.rs  test_tone.rs  wire.rs
crates/wail-core/: Cargo.toml
crates/wail-core/src/: clock.rs  clock_tests.rs  interval.rs  interval_tests.rs  lib.rs  link.rs  protocol.rs  protocol_tests.rs
crates/wail-e2e/: CLAUDE.md  Cargo.toml
crates/wail-e2e/src/: chat.rs  main.rs
crates/wail-net/: Cargo.toml
crates/wail-net/src/: lib.rs  peer.rs  signaling.rs
crates/wail-net/tests/: ipc_e2e.rs  network.rs  signaling_tests.rs
crates/wail-net/tests/common/: mod.rs
crates/wail-plugin/: Cargo.toml
crates/wail-plugin-recv/: Cargo.toml
crates/wail-plugin-recv/src/: editor.rs  lib.rs  params.rs
crates/wail-plugin-send/: Cargo.toml
crates/wail-plugin-send/src/: lib.rs  params.rs
crates/wail-plugin-test/: Cargo.toml  build.rs
crates/wail-plugin-test/src/: lib.rs
crates/wail-plugin-test/tests/: recv_plugin.rs  send_plugin.rs  send_recv_webrtc_e2e.rs  transport_e2e.rs
crates/wail-plugin-test/tests/common/: mod.rs
crates/wail-plugin/src/: audio_bridge.rs  lib.rs
crates/wail-signaling/: Cargo.toml
crates/wail-signaling/src/: main.rs
crates/wail-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/wail-tauri/capabilities/: default.json
crates/wail-tauri/nsis/: installer.nsi
crates/wail-tauri/src/: commands.rs  events.rs  filelog.rs  hb.rs  lib.rs  loki.rs  main.rs  peers.rs  plugin_install.rs  recorder.rs  session.rs  stream_names.rs
crates/wail-tauri/ui/: index.html  main.js  style.css
crates/wail-test-client/: Cargo.toml
crates/wail-test-client/src/: main.rs
docs/: architecture.md  audio-next-steps.md  missing-tests-punchlist.md  networking.md  system-evaluation.md  test-strategies.md
homebrew/: wail.rb
packaging/windows/: wail.nuspec
packaging/windows/tools/: LICENSE.txt  VERIFICATION.txt  chocolateyInstall.ps1  chocolateyUninstall.ps1
signaling-server/: main.go  main_test.go
signaling-server/cmd/wail-metrics/: main.go
val-town/: main.ts  signaling.ts
wail-app/: app.go  clock.go  clock_test.go  events.go  go.mod  go.sum  ipc.go  ipc_test.go  link.go  link_real.go  link_stub.go  link_test.go  link_types.go  main.go  noop_emitter.go  peers.go  peers_test.go  protocol.go  protocol_test.go  recorder.go  session.go  signaling.go  stream_names.go  stream_names_test.go  wails_emitter.go  wav_sender.go  wire.go  wire_test.go
wail-app/frontend/: index.html  wails-adapter.js
web/: listener.html
xtask/src/: main.rs
