[workspace]
resolver = "2"
members = [
    "crates/wail-core",
    "crates/wail-audio",
    "crates/wail-net",
    "crates/wail-e2e",
    "crates/wail-plugin-send",
    "crates/wail-plugin-recv",
    "crates/wail-plugin-test",
    "crates/wail-tauri",
    "crates/wail-test-client",
    "xtask",
]

[workspace.package]
version = "1.23.2"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
rand = "0.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
