[package]
name = "wail-app"
version.workspace = true
edition.workspace = true

[dependencies]
wail-core = { path = "../wail-core" }
wail-net = { path = "../wail-net" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
uuid = { workspace = true }
anyhow = { workspace = true }
