[package]
name = "wail-e2e"
version.workspace = true
edition.workspace = true

[[bin]]
name = "wail-e2e"
path = "src/main.rs"

[[bin]]
name = "wail-chat"
path = "src/chat.rs"

[dependencies]
wail-core = { path = "../wail-core" }
wail-audio = { path = "../wail-audio" }
wail-net = { path = "../wail-net" }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
