[package]
name = "wail-net"
version.workspace = true
edition.workspace = true

[dependencies]
wail-core = { path = "../wail-core" }
wail-audio = { path = "../wail-audio" }
webrtc = "0.11"
webrtc-ice = "0.11"
bytes = "1"
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
axum = "0.7"
tracing-subscriber = { workspace = true }
