[package]
name = "wail-net"
version.workspace = true
edition.workspace = true

[dependencies]
wail-core = { path = "../wail-core" }
wail-audio = { path = "../wail-audio" }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
md5 = "0.7"
tracing-subscriber = { workspace = true }
