[package]
name = "wail-signaling"
version.workspace = true
edition.workspace = true

[dependencies]
wail-core = { path = "../wail-core" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
